--- a/Flixter/Base.lproj/LaunchScreen.storyboard
+++ b/Flixter/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="wjA-fU-n6I">
-                                <rect key="frame" x="64" y="337" width="286" height="162"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="wjA-fU-n6I">
+                                <rect key="frame" x="138" y="345" width="138" height="139"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="flix" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSB-3U-3tS">
-                                <rect key="frame" x="155" y="516" width="104" height="52"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="flix" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSB-3U-3tS">
+                                <rect key="frame" x="188.5" y="494" width="37.5" height="48"/>
                                 <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="31"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -30,6 +28,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="wjA-fU-n6I" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="7GX-WO-g8h"/>
+                            <constraint firstItem="wjA-fU-n6I" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-33.5" id="FKG-vf-Gdl"/>
+                            <constraint firstItem="CSB-3U-3tS" firstAttribute="top" secondItem="wjA-fU-n6I" secondAttribute="bottom" constant="10" id="bs9-C6-aov"/>
+                            <constraint firstItem="CSB-3U-3tS" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="yJy-RW-9ds"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
