--- a/Flixter/Base.lproj/Main.storyboard
+++ b/Flixter/Base.lproj/Main.storyboard
@@ -195,7 +195,7 @@
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O4H-3t-tKs">
-                                        <rect key="frame" x="15" y="192" width="134.5" height="210"/>
+                                        <rect key="frame" x="15" y="162" width="134.5" height="210"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="210" id="4sz-jJ-4bu"/>
                                             <constraint firstAttribute="width" secondItem="O4H-3t-tKs" secondAttribute="height" multiplier="41:64" id="bDa-To-f9B"/>
@@ -208,31 +208,31 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYW-4m-Vcy">
-                                        <rect key="frame" x="15" y="463" width="389" height="20.5"/>
+                                        <rect key="frame" x="15" y="433" width="389" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nsd-ia-HTE">
-                                        <rect key="frame" x="159.5" y="316" width="244.5" height="21"/>
+                                        <rect key="frame" x="159.5" y="321" width="244.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNz-Zx-fGg">
-                                        <rect key="frame" x="159.5" y="368" width="244.5" height="21"/>
+                                        <rect key="frame" x="159.5" y="383" width="244.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Reviews: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXA-9P-nR3">
-                                        <rect key="frame" x="159.5" y="342" width="244.5" height="21"/>
+                                        <rect key="frame" x="159.5" y="357" width="244.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XjW-A6-W1n">
-                                        <rect key="frame" x="15" y="417" width="389" height="31"/>
+                                        <rect key="frame" x="15" y="387" width="134.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="gray" title="Trailer"/>
                                         <connections>
@@ -241,7 +241,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="O4H-3t-tKs" firstAttribute="top" secondItem="qKH-jN-YZl" secondAttribute="bottom" constant="-70" id="4cJ-Y5-PsI"/>
+                                    <constraint firstItem="O4H-3t-tKs" firstAttribute="top" secondItem="qKH-jN-YZl" secondAttribute="bottom" constant="-100" id="4cJ-Y5-PsI"/>
                                     <constraint firstItem="O4H-3t-tKs" firstAttribute="leading" secondItem="zMZ-dn-M2p" secondAttribute="leading" constant="15" id="6qt-ir-UPs"/>
                                     <constraint firstItem="rYW-4m-Vcy" firstAttribute="top" secondItem="XjW-A6-W1n" secondAttribute="bottom" constant="15" id="9m4-1z-dyp"/>
                                     <constraint firstItem="xNz-Zx-fGg" firstAttribute="top" secondItem="DXA-9P-nR3" secondAttribute="bottom" constant="5" id="C2z-nq-vMW"/>
@@ -253,18 +253,18 @@
                                     <constraint firstItem="fBc-Tz-zPV" firstAttribute="leading" secondItem="O4H-3t-tKs" secondAttribute="trailing" constant="10" id="Onf-ON-7Lu"/>
                                     <constraint firstItem="XjW-A6-W1n" firstAttribute="top" secondItem="O4H-3t-tKs" secondAttribute="bottom" constant="15" id="Ph9-1Q-AnC"/>
                                     <constraint firstItem="xNz-Zx-fGg" firstAttribute="trailing" secondItem="DXA-9P-nR3" secondAttribute="trailing" id="Qyh-da-kBg"/>
-                                    <constraint firstItem="rYW-4m-Vcy" firstAttribute="trailing" secondItem="XjW-A6-W1n" secondAttribute="trailing" id="UUv-wc-LEy"/>
                                     <constraint firstItem="zMZ-dn-M2p" firstAttribute="trailing" secondItem="fBc-Tz-zPV" secondAttribute="trailing" constant="10" id="UtA-Iv-RQa"/>
                                     <constraint firstItem="DXA-9P-nR3" firstAttribute="trailing" secondItem="Nsd-ia-HTE" secondAttribute="trailing" id="du6-DJ-Ew3"/>
                                     <constraint firstItem="xNz-Zx-fGg" firstAttribute="leading" secondItem="DXA-9P-nR3" secondAttribute="leading" id="f5x-Ys-OjJ"/>
                                     <constraint firstItem="GEE-MD-xa1" firstAttribute="bottom" secondItem="rYW-4m-Vcy" secondAttribute="bottom" constant="20" id="fCk-T2-rH5"/>
                                     <constraint firstItem="qKH-jN-YZl" firstAttribute="trailing" secondItem="GEE-MD-xa1" secondAttribute="trailing" constant="414" id="iiJ-AN-niD"/>
-                                    <constraint firstItem="DXA-9P-nR3" firstAttribute="top" secondItem="Nsd-ia-HTE" secondAttribute="bottom" constant="5" id="ijY-Ct-SKH"/>
-                                    <constraint firstItem="Nsd-ia-HTE" firstAttribute="top" secondItem="fBc-Tz-zPV" secondAttribute="bottom" constant="20" id="kx6-0P-lGa"/>
+                                    <constraint firstItem="DXA-9P-nR3" firstAttribute="top" secondItem="Nsd-ia-HTE" secondAttribute="bottom" constant="15" id="ijY-Ct-SKH"/>
+                                    <constraint firstItem="Nsd-ia-HTE" firstAttribute="top" secondItem="fBc-Tz-zPV" secondAttribute="bottom" constant="25" id="kx6-0P-lGa"/>
+                                    <constraint firstItem="rYW-4m-Vcy" firstAttribute="trailing" secondItem="xNz-Zx-fGg" secondAttribute="trailing" id="mlJ-Y3-ZWA"/>
                                     <constraint firstItem="qKH-jN-YZl" firstAttribute="top" secondItem="GEE-MD-xa1" secondAttribute="top" constant="30" id="nPl-Cd-3dr"/>
                                     <constraint firstItem="rYW-4m-Vcy" firstAttribute="leading" secondItem="XjW-A6-W1n" secondAttribute="leading" id="sX7-Ok-Eha"/>
                                     <constraint firstItem="fBc-Tz-zPV" firstAttribute="top" secondItem="qKH-jN-YZl" secondAttribute="bottom" constant="10" id="wkl-qR-gKQ"/>
-                                    <constraint firstItem="XjW-A6-W1n" firstAttribute="trailing" secondItem="xNz-Zx-fGg" secondAttribute="trailing" id="zJy-7j-Tqt"/>
+                                    <constraint firstItem="XjW-A6-W1n" firstAttribute="trailing" secondItem="O4H-3t-tKs" secondAttribute="trailing" id="zJy-7j-Tqt"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="GEE-MD-xa1"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="zMZ-dn-M2p"/>
